<resources>
    <string name="app_name">Babsayee</string>
    <string name="todo">TODO</string>
    <string name="number">01746013632</string>
    <string name="name">akash</string>
    <string name="change_company">Change Company</string>
    <string name="dashboard">Dashboard</string>
    <string name="product">Product</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="group_tittle">group tittle</string>
    <string name="customer">Customer</string>
    <string name="customer_add">Customer Add</string>
    <string name="customer_list">Customer List</string>
    <string name="customer_group">Customer Group</string>
    <string name="supplier">Supplier</string>
    <string name="supplier_add">Supplier Add</string>
    <string name="supplier_list">Supplier List</string>
    <string name="supplier_group">Supplier Group</string>
</resources>