<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:title="@string/dashboard"
        android:icon="@drawable/dashbord"/>

    <item
        android:id="@+id/product"
        android:title="@string/product"
        android:icon="@drawable/product_new"/>

    <item
        android:id="@+id/holder"
        app:showAsAction="ifRoom"
        android:title=""
        android:enabled="false"/>

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:icon="@drawable/setting"/>

    <item
        android:id="@+id/customer"
        android:title="@string/profile"
        android:icon="@drawable/profile"/>

</menu>