<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/olive"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/image_height"
        android:layout_height="@dimen/image_height"
        android:contentDescription="@string/todo"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:src="@drawable/ic_launcher_background"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/dp_12"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/name"
            android:fontFamily="@font/readexpro_bold"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:fontFamily="@font/solaimanlipi_regular"
            android:text="@string/number" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:textColor="@color/white"
            android:gravity="center"
            android:fontFamily="@font/solaimanlipi_regular"
            android:drawablePadding="@dimen/dp_6"
            android:text="@string/change_company"
            app:drawableTint="@color/white"
            app:drawableEndCompat="@drawable/baseline_keyboard_arrow_down_24" />
    </LinearLayout>


</LinearLayout>